--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     Try installing the latest version of
     <a href="https://www.google.com/chrome/">Google's Chrome browser</a>!
 </canvas>
-
-<script src="js/app.js"></script>
+<!--<p>Arrow keys to move around, Space to meow, X to projectile puke</p>-->
+<script src="js/oldmove.js"></script>
 </body>
 </html>
