added text, background

--- a/matterindex.html
+++ b/matterindex.html
@@ -8,6 +8,11 @@
         <link rel="stylesheet" href="css/matter.css">
     </head>
     <body>
+    <h1>Welcome to the Bucky Basket Game!</h1>
+    <p>Drag and throw all the Bucky objects into the basket at the bottom!</p>
+    <p>Be careful - if you throw Bucky too hard, he escapes the screen to go nap angrily on your clean sheets.</p>
+    <h2><i>(DON'T LET THAT HAPPEN)</i></h2>
+    <p>Refresh to start again!</p>
     <script src="js/matter-0.8.0.js" type="text/javascript"></script>
     <script src="js/matter.js"></script>
     </body>
