--- a/matterindex.html
+++ b/matterindex.html
@@ -4,7 +4,7 @@
         <meta name="viewport"
               content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
         <meta charset="UTF-8">
-        <title>Matter.js Game</title>
+        <title>Bucky Basket</title>
         <link rel="stylesheet" href="css/matter.css">
     </head>
     <body>
