--- a/oldindex.html
+++ b/oldindex.html
@@ -14,6 +14,6 @@
     <a href="https://www.google.com/chrome/">Google's Chrome browser</a>!
 </canvas>
 <!--<p>Arrow keys to move around, Space to meow, X to projectile puke</p>-->
-<script src="js/oldmove.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
